Refactor slightly to include number of keyphrases

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -9,5 +9,13 @@
   &__textbox-label {
     font: 30px;
   }
+
+  &__key-phrases-number {
+    margin-top: 10px;
+  }
+
+  &__key-phrases {
+    margin-top: 10px;
+  }
 }
 
